Abstract ocenpiwo model

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -57,7 +57,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "06lrti-Nt8g-"
+        "id": "oMaGx0YYuCGu"
       },
       "outputs": [],
       "source": [
@@ -317,7 +317,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "FjfMvDnUt8hF"
+        "id": "EaRC_7rAuCG0"
       },
       "outputs": [],
       "source": [
@@ -448,8 +448,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0WjAdZVWt8hH",
-        "outputId": "61079331-4a47-4420-80e2-2d94091adfef"
+        "id": "tO_xtf2XuCG3",
+        "outputId": "0fb7d4e5-5a4d-4726-faa0-743b0f75772d"
       },
       "outputs": [
         {
@@ -561,19 +561,26 @@
         "import torch\n",
         "import json\n",
         "\n",
-        "class OcenPiwoReviews(torch.utils.data.Dataset):\n",
-        "    def __init__(self, filepath='/content/ocen-piwo-utf8.json', reviews_max=float('inf')):\n",
-        "        self.aspects = ['ogólny', 'smak', 'zapach', 'wygląd',]\n",
-        "        self.aspect_count = len(self.aspects)\n",
-        "        self.aspect_max = [10, 10, 10, 10]\n",
-        "        self._aspect_ratings = [ [] for _ in self.aspects ]\n",
-        "        self._texts = []\n",
-        "        self.unkn_tok = \"<unk>\" # unknown/out of vocabulary token\n",
-        "        self._len = 0\n",
-        "        self._fetch_data(filepath, reviews_max)\n",
-        "        self._post_process(max_word_count=20000) # 20K words should be okay\n",
+        "class OcenPiwoReviews(BaseReviews):\n",
+        "    def __init__(self):\n",
+        "        aspects = ['ogólny', 'smak', 'zapach', 'wygląd',]\n",
+        "        super().__init__(\n",
+        "            aspects        = aspects,\n",
+        "            aspect_max     = [10, 10, 10, 10],\n",
+        "            aspect_ratings = [ [] for _ in aspects ],\n",
+        "            texts          = [],\n",
+        "            unkn_tok       = '<unk>', # unknown/out of vocabulary token\n",
+        "            _len            = 0,\n",
+        "            anchor_words = {\n",
+        "                'ogólny'     : ('ogólnie'),\n",
+        "                'smak'       : ('smak'),\n",
+        "                'zapach'     : ('zapach'),\n",
+        "                'wygląd'     : ('wygląd', 'wygląda')\n",
+        "            },\n",
+        "        )\n",
+        "        self.pipe = None\n",
         "\n",
-        "    def _fetch_data(self, filepath, reviews_max):\n",
+        "    def build(self, filepath=f'{ROOT_DIR}/ocen-piwo-utf8.json', min_word_freq=None, max_word_count=None):\n",
         "        with io.open(filepath, encoding='utf-8') as f:\n",
         "            json_dict = json.loads(f.read())\n",
         "\n",
@@ -585,24 +592,36 @@
         "                        self._aspect_ratings[aspect].append(ratings[aspect])\n",
         "\n",
         "                    self._texts.append(sentences)\n",
+        "        self._post_process(min_word_freq, max_word_count)\n",
         "\n",
+        "    def _fetch_nlp_pipeline(self):\n",
+        "        if not self.pipe:\n",
+        "            nlp = spacy.load('pl_core_news_md')\n",
+        "            nlp.add_pipe(\"sentencizer\", config={\"punct_chars\": ['.', '?', '!']})\n",
+        "            nlp.Defaults.stop_words |= { '-', '+'}\n",
+        "            self.pipe = lambda reviews: nlp.pipe(reviews)\n",
+        "    \n",
+        "    def _free_nlp_pipeline(self):\n",
+        "        self.nlp = None\n",
+        "\n",
+        "    def tokenize_reviews(self, reviews_texts: str):\n",
+        "        return [tuple(list(tok.lower_ for tok in sent if not tok.is_stop and not tok.is_punct and not tok.is_space and len(tok) > 2) \\\n",
+        "            for sent in doc.sents if 0 != len(sent)) for doc in self.pipe(reviews_texts)]\n",
+        "    \n",
+        "    def id_map_reviews(self, texts):\n",
+        "        return [tuple(self.vocab.lookup_indices(sent) for sent in text) for text in texts]\n",
+        "    \n",
         "    def _post_process(self, min_word_freq=None, max_word_count=None):\n",
-        "        nlp = spacy.load('pl_core_news_md')\n",
-        "        nlp.add_pipe(\"sentencizer\", config={\"punct_chars\": ['.', '?', '!']})\n",
-        "        nlp.Defaults.stop_words |= { '-', '+', }\n",
+        "        assert (min_word_freq is not None) ^ bool(max_word_count is not None), \"provide one of min_word_freq and max_word_count\"\n",
+        "        self._fetch_nlp_pipeline()\n",
         "        print(\"Spacy pipe (tokenization&sentence split)..\")\n",
-        "\n",
         "        gc.collect() # force garbage collection\n",
-        "        self._texts = [tuple(list(tok.lower_ for tok in sent if not tok.is_stop and not tok.is_punct and not tok.is_space and len(tok) > 2) \n",
-        "            for sent in doc.sents if 0 != len(sent)) for doc in nlp.pipe(self._texts)]\n",
-        "\n",
+        "        self._texts = self.tokenize_reviews(self._texts)\n",
         "        for i, text in enumerate(self._texts):\n",
         "            assert 0 != len(text) # make sure no empty reviews again (new could be introduced by removing stop words unfortunately)\n",
-        "\n",
         "        print(\"Building vocab (word-id mapping)..\")\n",
         "        gc.collect() # force garbage collection\n",
         "        sent_gen = (sent for text in self._texts for sent in text)\n",
-        "\n",
         "        if min_word_freq:\n",
         "            self.vocab = build_vocab_from_iterator(sent_gen, specials=[self.unkn_tok], min_word_freq=5)\n",
         "        else:\n",
@@ -636,54 +655,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PzSnHS8OWhD7",
-        "outputId": "a5822079-fc1d-4e69-935c-22acbb7907b5"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=1RM_Sk8QeOQnjnje0gwxQfJIOIK0KLLWV\n",
-            "To: /content/ocen-piwo-utf8.json\n",
-            "100% 29.5M/29.5M [00:00<00:00, 71.3MB/s]\n"
-          ]
-        }
-      ],
       "source": [
-        "!gdown --id '1RM_Sk8QeOQnjnje0gwxQfJIOIK0KLLWV'"
-      ]
+        "%env USE_OCENPIWO_PICKLE=false"
+      ],
+      "metadata": {
+        "id": "P0YlFh34widy"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WSGWhTLvWXwq",
-        "outputId": "d42c8d60-bab3-4597-d04b-7cd55bd701a4"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Spacy pipe (tokenization&sentence split)..\n",
-            "Building vocab (word-id mapping)..\n",
-            "Mapping words to ids..\n"
-          ]
-        }
-      ],
       "source": [
-        "op = OcenPiwoReviews()"
-      ]
+        "%%bash\n",
+        "\n",
+        "if [ \"$USE_OCENPIWO_PICKLE\" = true ]\n",
+        "then # download pickle\n",
+        "    if [ ! -f './ocenpiwo-20K-vocab.pickle' ]\n",
+        "    then\n",
+        "        gdown --id '1zUXnY0UqvevNnePThTfquF6hUxxPOls9' # https://drive.google.com/file/d/1zUXnY0UqvevNnePThTfquF6hUxxPOls9/view  # 20K words dataset\n",
+        "    fi\n",
+        "else # download original dataset\n",
+        "    if [ ! -f './ocen-piwo-utf8.json' ]\n",
+        "    then\n",
+        "        gdown --id '1RM_Sk8QeOQnjnje0gwxQfJIOIK0KLLWV' # https://drive.google.com/file/d/1RM_Sk8QeOQnjnje0gwxQfJIOIK0KLLWV\n",
+        "        echo \"Dataset head (trailing newline makes entry end): \"\n",
+        "        head -n 16 $RATEBEER_FILE\n",
+        "        iconv -f ISO-8859-1 -t UTF-8 $RATEBEER_FILE -o {RATEBEER_FILE}.new && mv {RATEBEER_FILE}.new $RATEBEER_FILE\n",
+        "    fi\n",
+        "fi"
+      ],
+      "metadata": {
+        "id": "HhGr49H6wmVp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -705,17 +711,20 @@
         }
       ],
       "source": [
-        "DATASET_PICKLE='/content/ocenpiwo-20K-vocab.pickle'\n",
+        "op = OcenPiwoReviews()\n",
         "\n",
-        "with open(DATASET_PICKLE, 'wb') as f:\n",
+        "if os.environ.get('USE_OCENPIWO_PICKLE') == 'true':\n",
+        "    op.load('./', 'ocenpiwo-20K-vocab.pickle')\n",
+        "else: # build pickle\n",
+        "    op.build('./ocen-piwo-utf8.json', max_word_count=20000)\n",
         "    print('Dumping..')\n",
-        "    torch.save(op, f)"
+        "    op.dump('./', 'ocenpiwo-20K-vocab.pickle')"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dOLgrQqMt8hL"
+        "id": "maiw0KGOuCG6"
       },
       "source": [
         "If you want to read dataset from dataset file, set FETCH_RATEBEER to true in the cell below and RECREATE_PICKLE to True. If you left them untouched, it'lle be read from serialized `RateBeerReviews` class object instead of parsing text file."
@@ -1113,7 +1122,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dNwOBHLQt8hN"
+        "id": "4M-dJ1YWuCG8"
       },
       "outputs": [],
       "source": [
@@ -1129,6 +1138,7 @@
       "collapsed_sections": [],
       "name": "1e100ibu.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
