Tie LR schedule to batch, not epoch, add cyclic LR experiment

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "at8Z-ETyKngp"
       },
@@ -93,12 +93,13 @@
       "source": [
         "!pip install --quiet icecream\n",
         "# !pip install --quiet -Iv torch==1.10.1\n",
-        "# !pip install --quiet -Iv torchtext==0.11.1"
+        "# !pip install --quiet -Iv torchtext==0.11.1\n",
+        "!pip install --quiet gdown"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
@@ -119,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -167,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -204,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
@@ -279,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "EaRC_7rAuCG0"
       },
@@ -410,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -433,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "B_QTo-xBCelp",
         "colab": {
@@ -477,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "N5zmSYDBCg4B"
       },
@@ -678,7 +679,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
@@ -687,7 +688,6 @@
         "from torch.utils.data import random_split, DataLoader\n",
         "import datetime\n",
         "from scipy.optimize import linear_sum_assignment\n",
-        "from more_itertools import grouper\n",
         "\n",
         "# for wordcloudsdest_path=dest_path\n",
         "import unicodedata\n",
@@ -701,6 +701,7 @@
         "import functools\n",
         "from operator import iadd\n",
         "from typing import List\n",
+        "import unicodedata\n",
         "\n",
         "class AspectModel():\n",
         "    def __init__(self, dataset):\n",
@@ -820,22 +821,30 @@
         "        plt.show()\n",
         "\n",
         "    @staticmethod\n",
-        "    def experiments(dataset, root_dir=MODEL_ROOT_DIR):\n",
+        "    def experiments(dataset, root_dir=MODEL_ROOT_DIR, epoch_count=1, save_freq=5000):\n",
+        "        for _ in range(1):\n",
+        "            directory = str(datetime.datetime.now()) + '-cyclic'\n",
+        "            path = os.path.join(root_dir, directory)\n",
+        "            os.mkdir(path)\n",
+        "\n",
+        "            model = AspectModel(dataset)\n",
+        "            model.train(dest_path=path, sched='cyclic', epoch_count=epoch_count, save_freq=save_freq)\n",
+        "            \n",
         "        for _ in range(1):\n",
         "            directory = str(datetime.datetime.now()) + '-adam'\n",
         "            path = os.path.join(root_dir, directory)\n",
         "            os.mkdir(path)\n",
         "\n",
         "            model = AspectModel(dataset)\n",
-        "            model.train(dest_path=path, optim='adam')\n",
+        "            model.train(dest_path=path, optim='adam', epoch_count=epoch_count, save_freq=save_freq)\n",
         "\n",
-        "        for _ in range(2):\n",
+        "        for _ in range(1):\n",
         "            directory = str(datetime.datetime.now())\n",
         "            path = os.path.join(root_dir, directory)\n",
         "            os.mkdir(path)\n",
         "            \n",
         "            model = AspectModel(dataset)\n",
-        "            model.train(dest_path=path)\n",
+        "            model.train(dest_path=path, epoch_count=epoch_count, save_freq=save_freq)\n",
         "\n",
         "    def test_nll(self, debug=False):\n",
         "        nlls = []\n",
@@ -907,7 +916,7 @@
         "            print(f'Predicted sentences aspects: ', *[self.ds.aspects[target_idx] for target_idx in (revs_sents_aspect_preds[i])])\n",
         "            print()\n",
         "\n",
-        "    def train(self, dest_path=MODEL_ROOT_DIR, epoch_count=1, optim='sgd'):\n",
+        "    def train(self, dest_path=MODEL_ROOT_DIR, epoch_count=1, optim='sgd', sched=None, lr=None, save_freq=5000):\n",
         "        train_size = int(0.8 * len(self.ds))\n",
         "        test_size = len(self.ds) - train_size\n",
         "\n",
@@ -915,9 +924,11 @@
         "            self.theta,\n",
         "            *self.phis\n",
         "        )\n",
-        "        # lr = 0.0005 # for ratebeer; remove\n",
-        "        batch_size = 100\n",
-        "        lr = sum(self.ds.aspect_max) * 1e-7 / batch_size\n",
+        "        \n",
+        "        if lr is None:\n",
+        "            # lr = 0.0005 # for ratebeer; remove\n",
+        "            batch_size = 100\n",
+        "            lr = sum(self.ds.aspect_max) * 1e-7 / batch_size\n",
         "\n",
         "        weight_decay = 0.0001\n",
         "        momentum = 0.1\n",
@@ -928,16 +939,23 @@
         "                weight_decay=weight_decay,\n",
         "                momentum=momentum\n",
         "            )\n",
-        "        elif optim == 'adam': # do not use Adam, weights go to NaN with it for some reason\n",
+        "        elif optim == 'adam':\n",
         "            self._optim = torch.optim.Adam(\n",
         "                params=params,\n",
         "                lr=lr,\n",
         "                weight_decay=weight_decay,\n",
-        "                betas=(momentum, 0.999) # the first is params momentum, second RMSProp momentum (for now fix to 0.999 which is default Pytorch value)\n",
+        "                betas=(momentum, 0.999) # the first is params momentum, second RMSProp momentum (for now set to 0.999 which is default Pytorch value)\n",
         "            )\n",
         "        else:\n",
         "            assert False\n",
-        "        self._sched = torch.optim.lr_scheduler.StepLR(self._optim, step_size=1, gamma=0.95)\n",
+        "        if sched == 'cyclic':\n",
+        "            self._sched = torch.optim.lr_scheduler.CyclicLR(\n",
+        "                self._optim,\n",
+        "                base_lr=lr*0.5,\n",
+        "                max_lr=2*lr\n",
+        "            )\n",
+        "        else:\n",
+        "            self._sched = torch.optim.lr_scheduler.StepLR(self._optim, step_size=2000, gamma=0.999)\n",
         "\n",
         "\n",
         "        self.train_ds, self.test_ds = random_split(self.ds, [train_size, test_size])\n",
@@ -982,7 +1000,7 @@
         "                    if 0 == i % 100:\n",
         "                        self.train_nll_history.append(batch_nll.cpu().detach().item())\n",
         "                        self.train_epoch_history.append(epoch + i / batch_count)\n",
-        "                    if 0 == i % 5000:\n",
+        "                    if 0 == i % save_freq:\n",
         "                        if i != 0:\n",
         "                            self.dump_weights(dest_path=dest_path, filename=(f'-epoch-{epoch}-{epoch_count}-{int(i)}'))\n",
         "                            self.word_clouds(dest_path=dest_path, filename=(f'cloud-epoch-{epoch}-{epoch_count}-{int(i)}.png'))\n",
@@ -992,7 +1010,7 @@
         "                    batch_nll.backward()\n",
         "\n",
         "                    self._optim.step()\n",
-        "                self._sched.step()\n",
+        "                    self._sched.step()\n",
         "\n",
         "            self.dump_weights(dest_path=dest_path, filename=(f'weights-end'))\n",
         "            self.word_clouds(dest_path=dest_path, filename=(f'cloud-end.png'))\n",
@@ -1100,7 +1118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "EVSk4pncPJqO"
       },
@@ -1113,7 +1131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1142,7 +1160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1179,7 +1197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 225,
+      "execution_count": null,
       "metadata": {
         "id": "4IUhdJwf6bsj"
       },
@@ -1322,7 +1340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 226,
+      "execution_count": null,
       "metadata": {
         "id": "HQBbWzo3ZqkM",
         "colab": {
@@ -1400,7 +1418,7 @@
       "metadata": {
         "id": "tgmq0ti-2pqL"
       },
-      "execution_count": 222,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1421,7 +1439,7 @@
         "id": "-rV3jWvFHxU7",
         "outputId": "e2c5ff62-37cc-42db-a488-a94948203ec8"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1457,7 +1475,7 @@
       "metadata": {
         "id": "--Qc-_m14hXT"
       },
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": []
     }
   ],
