Fix dataset naming

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -94,7 +94,8 @@
         "!pip install --quiet icecream\n",
         "# !pip install --quiet -Iv torch==1.10.1\n",
         "# !pip install --quiet -Iv torchtext==0.11.1\n",
-        "!pip install --quiet gdown"
+        "!pip install --quiet gdown\n",
+        "!pip install --quiet wordcloud"
       ]
     },
     {
@@ -545,9 +546,9 @@
         "\n",
         "                    self._texts.append(sentences)\n",
         "\n",
-        "                # TODO: check\n",
-        "                if self._len >= 10:\n",
-        "                    break\n",
+        "                # # TODO: check\n",
+        "                # if self._len >= 10:\n",
+        "                #     break\n",
         "        self._post_process(min_word_freq, max_word_count)\n",
         "\n",
         "    def _fetch_nlp_pipeline(self):\n",
@@ -812,11 +813,11 @@
         "        plt.xlabel('epoch')\n",
         "        plt.ylabel('NLL')\n",
         "        plt.xlim(left=0.0, right=self.train_epoch_history[-1])\n",
-        "        plt.ylim(bottom=min(0.0, min(self.train_nll_history)), top=max(max(self.train_nll_history), max(self.test_nll_history)))\n",
+        "        plt.ylim(bottom=min(0.0, min(self.train_nll_history)), top=max(max(self.train_nll_history), max(self.valid_nll_history)))\n",
         "        plt.plot(self.train_epoch_history, self.train_nll_history, '-o')\n",
-        "        plt.plot(self.test_epoch_history, self.test_nll_history, '-o')\n",
-        "        plt.legend(['train batch NLL', 'test mean batch NLL'], loc='upper right')\n",
-        "        plt.title('Train and test dataset NLL')\n",
+        "        plt.plot(self.valid_epoch_history, self.valid_nll_history, '-o')\n",
+        "        plt.legend(['train batch NLL', 'valid mean batch NLL'], loc='upper right')\n",
+        "        plt.title('Train and valid dataset NLL')\n",
         "        plt.savefig(os.path.join(dir, filename))\n",
         "        plt.show()\n",
         "\n",
@@ -846,11 +847,11 @@
         "            model = AspectModel(dataset)\n",
         "            model.train(dest_path=path, epoch_count=epoch_count, save_freq=save_freq)\n",
         "\n",
-        "    def test_nll(self, debug=False):\n",
+        "    def valid_nll(self, debug=False):\n",
         "        nlls = []\n",
         "        with torch.no_grad():\n",
-        "            test_loader = DataLoader(self.test_ds, batch_size=100, collate_fn=lambda x: x) # do not use default collate function as it requires fixed-length input and raises this exception otherwise https://github.com/pytorch/pytorch/issues/42654\n",
-        "            for i, batch in enumerate(tqdm(test_loader, desc='test validation')):\n",
+        "            valid_loader = DataLoader(self.valid_ds, batch_size=100, collate_fn=lambda x: x) # do not use default collate function as it requires fixed-length input and raises this exception otherwise https://github.com/pytorch/pytorch/issues/42654\n",
+        "            for i, batch in enumerate(tqdm(valid_loader, desc='validation')):\n",
         "                batch_nlls = []\n",
         "                for (rev_sents_ids, review_aspects_scores) in batch:\n",
         "                    rev_thetas = self.rev_words_thetas(rev_sents_ids)\n",
@@ -918,7 +919,7 @@
         "\n",
         "    def train(self, dest_path=MODEL_ROOT_DIR, epoch_count=1, optim='sgd', sched=None, lr=None, save_freq=5000):\n",
         "        train_size = int(0.8 * len(self.ds))\n",
-        "        test_size = len(self.ds) - train_size\n",
+        "        valid_size = len(self.ds) - train_size\n",
         "\n",
         "        params = (\n",
         "            self.theta,\n",
@@ -958,13 +959,13 @@
         "            self._sched = torch.optim.lr_scheduler.StepLR(self._optim, step_size=2000, gamma=0.999)\n",
         "\n",
         "\n",
-        "        self.train_ds, self.test_ds = random_split(self.ds, [train_size, test_size])\n",
+        "        self.train_ds, self.valid_ds = random_split(self.ds, [train_size, valid_size])\n",
         "        train_loader = DataLoader(self.train_ds, batch_size=100, shuffle=True, collate_fn=lambda x: x) # do not use default collate function as it requires fixed-length input and raises this exception otherwise https://github.com/pytorch/pytorch/issues/42654\n",
         "\n",
         "        self.train_epoch_history = []\n",
-        "        self.test_epoch_history = []\n",
+        "        self.valid_epoch_history = []\n",
         "        self.train_nll_history = []\n",
-        "        self.test_nll_history = []\n",
+        "        self.valid_nll_history = []\n",
         "        try:\n",
         "            for epoch in range(epoch_count):\n",
         "                batch_count = len(train_loader)\n",
@@ -1005,8 +1006,8 @@
         "                            self.dump_weights(dest_path=dest_path, filename=(f'-epoch-{epoch}-{epoch_count}-{int(i)}'))\n",
         "                            self.word_clouds(dest_path=dest_path, filename=(f'cloud-epoch-{epoch}-{epoch_count}-{int(i)}.png'))\n",
         "                            # ic(self.rev_words_thetas([self.ds.vocab.lookup_indices(['taste', 'aroma', 'palete', 'antrunk'])]))\n",
-        "                        self.test_nll_history.append(self.test_nll())\n",
-        "                        self.test_epoch_history.append(epoch + i / batch_count)\n",
+        "                        self.valid_nll_history.append(self.valid_nll())\n",
+        "                        self.valid_epoch_history.append(epoch + i / batch_count)\n",
         "                    batch_nll.backward()\n",
         "\n",
         "                    self._optim.step()\n",
@@ -1253,17 +1254,17 @@
         "    def rev_words_gammas(self, rev_sens_ids):\n",
         "        return [[self.gammas[aspect_idx][sen_ids, :] for aspect_idx in range(self.ds.aspect_count)] for sen_ids in rev_sens_ids]\n",
         "\n",
-        "    def test_nll(self, debug=False):\n",
+        "    def valid_nll(self, debug=False):\n",
         "        train_size = int(0.99955 * len(self.ds))\n",
-        "        test_size = len(self.ds) - train_size\n",
+        "        valid_size = len(self.ds) - train_size\n",
         "\n",
-        "        self.train_ds, self.test_ds = random_split(self.ds, [train_size, test_size])\n",
+        "        self.train_ds, self.valid_ds = random_split(self.ds, [train_size, valid_size])\n",
         "\n",
         "        mean_l2 = []\n",
         "        guesses = correctly_guessed = 0\n",
         "        with torch.no_grad():\n",
-        "            test_loader = DataLoader(self.test_ds, batch_size=100, collate_fn=lambda x: x) # do not use default collate function as it requires fixed-length input and raises this exception otherwise https://github.com/pytorch/pytorch/issues/42654\n",
-        "            for i, batch in enumerate(tqdm(test_loader, desc='test validation')):\n",
+        "            valid_loader = DataLoader(self.valid_ds, batch_size=100, collate_fn=lambda x: x) # do not use default collate function as it requires fixed-length input and raises this exception otherwise https://github.com/pytorch/pytorch/issues/42654\n",
+        "            for i, batch in enumerate(tqdm(valid_loader, desc='valid validation')):\n",
         "                for (rev_sents_ids, review_aspects_scores) in batch:\n",
         "                    \n",
         "                    # we assume that we know overall rating\n",
@@ -1405,7 +1406,7 @@
       ],
       "source": [
         "model = RatingModel(rb, model_rb)\n",
-        "model.test_nll()"
+        "model.valid_nll()"
       ]
     },
     {
