Update main notebook with artifacts info

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Sl9RJDTxJOTY",
         "colab": {
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "oMaGx0YYuCGu",
         "colab": {
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "rvQgSM-fB7YP",
         "colab": {
@@ -170,12 +170,14 @@
       },
       "source": [
         "## Dataset representation\n",
-        "Here we introduce `BaseReviews`, `RateBeerReviews`, `OcenPiwoReviews` classes. For each dataset we pick 20k most common words vocabulary and then then map them to numerical ID-s. 0th index is used for unknown token."
+        "Here we introduce `BaseReviews`, `RateBeerReviews`, `OcenPiwoReviews` classes. For each dataset we pick 20k most common words vocabulary and then then map them to numerical ID-s. 0th index is used for unknown token.\n",
+        "\n",
+        "We recommend at least 16 GB RAM/RAM+swap for digesting whole SNAP Ratebeer dataset. We provide serialized version that is ready to use for both of datasets and has lower memory footprint."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": null,
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
@@ -253,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": null,
       "metadata": {
         "id": "EaRC_7rAuCG0"
       },
@@ -385,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": null,
       "metadata": {
         "id": "tO_xtf2XuCG3",
         "colab": {
@@ -408,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": null,
       "metadata": {
         "id": "B_QTo-xBCelp"
       },
@@ -437,7 +439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": null,
       "metadata": {
         "id": "N5zmSYDBCg4B"
       },
@@ -455,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": null,
       "metadata": {
         "id": "PCLRTvJYV2So"
       },
@@ -561,7 +563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": null,
       "metadata": {
         "id": "P0YlFh34widy",
         "colab": {
@@ -584,7 +586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": null,
       "metadata": {
         "id": "HhGr49H6wmVp"
       },
@@ -608,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": null,
       "metadata": {
         "id": "1mRsWfMxrst_"
       },
@@ -721,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": null,
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
@@ -1150,7 +1152,7 @@
       "metadata": {
         "id": "OgcOR1aZLyZ7"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1161,17 +1163,6 @@
       "metadata": {
         "id": "fZ1opvIN7yf4"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "xRKRnGO29_-Z"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1223,7 +1214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 179,
+      "execution_count": null,
       "metadata": {
         "id": "4IUhdJwf6bsj"
       },
@@ -1369,7 +1360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 180,
+      "execution_count": null,
       "metadata": {
         "id": "HQBbWzo3ZqkM"
       },
@@ -1393,9 +1384,18 @@
       "cell_type": "markdown",
       "source": [
         "### Training artifacts\n",
-        "It came out the datasets converge really fast for the validation set.\n",
         "\n",
-        "#### NLL plot sample"
+        "We release training artifacts like training NLL plots, word clouds, digested serialized dattasets, trained weights of our models on our [GitHub repository release page](https://github.com/madziejm/1e100-ibu/releases/). At the time of writing the latest version is [$v\\text{-}e^{-100}$](https://github.com/madziejm/1e100-ibu/releases/tag/v1e-100-alpha).\n",
+        "\n",
+        "#### NLL plot sample\n",
+        "\n",
+        "Along with a training run we plot NLL changes for both current training batch and mean of validation set batches (mean is calculated for having the same scale).\n",
+        "It came out that both the datasets converge really fast for the validation.\n",
+        "\n",
+        "See this sample plot for ocen-piwo\n",
+        "![NLL plot example for ocen-piwo](https://github.com/madziejm/1e100-ibu/releases/download/v1e-100-alpha/2022-02-08-01.04.49.396590-adam-OcenPiwoReviews-plot-end.png)\n",
+        "\n",
+        "We see on that some runs overfit and we think that resulting word clouds are less plausible in this situation."
       ],
       "metadata": {
         "id": "n6zM4glmMPdi"
@@ -1406,12 +1406,18 @@
       "source": [
         "### Word clouds\n",
         "\n",
-        "The most representative word clouds for the datasets.\n",
+        "We present segmentation model weights a word clouds (who does remember Web 2.0 times?). Resulting file are quite large, please keep this in mind.\n",
         "\n",
         "#### Ratebeer dataset:\n",
         "\n",
+        "Two of six runs we produced last time we ran training were considered rewarding by us and we released them (see release page). Here we present just a single.\n",
+        "![rb word cloud](https://github.com/madziejm/1e100-ibu/releases/download/v1e-100-alpha/2022-02-07-20.19.48.948016-cyclic-RateBeerReviews-cloud-end.png)\n",
         "\n",
         "#### Ocenpiwo dataset:\n",
+        "\n",
+        "All of ocen-piwo word clouds are extremely satisfying for any Polish native speaker we know, even better than English ones. That's why we released 6 of them (see release page).\n",
+        "Here we present just a single.\n",
+        "![rb word cloud](https://github.com/madziejm/1e100-ibu/releases/download/v1e-100-alpha/2022-02-07-23.33.49.941568-cyclic-OcenPiwoReviews-cloud-end.png)\n",
         "\n"
       ],
       "metadata": {
@@ -1431,7 +1437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 176,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1471,7 +1477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 181,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1561,7 +1567,7 @@
       "metadata": {
         "id": "_0oLTJFLMmQd"
       },
-      "execution_count": 310,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1596,7 +1602,7 @@
         "id": "Jw4wHXIbR5jZ",
         "outputId": "4d8c103a-312c-4b5a-d9a0-e79f79fb9a7e"
       },
-      "execution_count": 311,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1643,7 +1649,7 @@
         "id": "e3fCSRo3ocqt",
         "outputId": "7ca17ea7-cbb5-459f-e1a5-26bfa44ad5c2"
       },
-      "execution_count": 312,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1686,7 +1692,7 @@
       "metadata": {
         "id": "avIHvsE9JO4r"
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1720,7 +1726,7 @@
         "id": "7FhugwEPMAWS",
         "outputId": "16789fd3-fcd9-4f66-a88d-0ae084bf64fd"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1765,7 +1771,7 @@
         },
         "outputId": "f291095e-51bc-42c9-8dcd-b779dfd1d328"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1807,7 +1813,6 @@
       "collapsed_sections": [],
       "name": "1e100ibu.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "environment": {
