--- a/1e100ibu_embedding_stars.ipynb
+++ b/1e100ibu_embedding_stars.ipynb
@@ -3696,8 +3696,7 @@
       "collapsed_sections": [
         "ZMhH5l9MeZho",
         "CT48xPyXJHy9",
-        "l2rKyNj16K5t",
-        "VLsETpEO6K51"
+        "l2rKyNj16K5t"
       ],
       "name": "1e100ibu-embedding-stars.ipynb",
       "provenance": [],
