--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -1413,9 +1413,11 @@
         "Two of six runs we produced last time we ran training were considered rewarding by us and we released them (see release page). Here we present just a single.\n",
         "![rb word cloud](https://github.com/madziejm/1e100-ibu/releases/download/v1e-100-alpha/2022-02-07-20.19.48.948016-cyclic-RateBeerReviews-cloud-end.png)\n",
         "\n",
+        "**Note that the word clouds we found looking best for this dataset were the ones trained with cyclic learning rate schedule. It would be extremely valuable to know whether it is motivated or just a pure coincidence.**\n",
+        "\n",
         "#### Ocenpiwo dataset:\n",
         "\n",
-        "All of ocen-piwo word clouds are extremely satisfying for any Polish native speaker we know, even better than English ones. That's why we released 6 of them (see release page).\n",
+        "All of ocen-piwo word clouds are extremely satisfying for any Polish native speaker we know and even much better than English ones. That's why we released 6 of them (see release page).\n",
         "Here we present just a single.\n",
         "![rb word cloud](https://github.com/madziejm/1e100-ibu/releases/download/v1e-100-alpha/2022-02-07-23.33.49.941568-cyclic-OcenPiwoReviews-cloud-end.png)\n",
         "\n"
@@ -1428,6 +1430,8 @@
       "cell_type": "markdown",
       "source": [
         "### Inference\n",
+        "\n",
+        "The whole weights thing was intended to provide aspect assignments for sentence text. Let's see this in action.\n",
         "\n",
         "Two examples of infering both aspects and rating assignement for reviews."
       ],
